--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -1,1 +1,5 @@
 @import "wrapper/index"
+@import "nav-header/nav-header"
+@import "header/header"
+@import "footer/footer"
+@import "simple-btn/simpe-btn"
