--- a/resources/assets/stylesheets/sass/helpers/mixins.sass
+++ b/resources/assets/stylesheets/sass/helpers/mixins.sass
@@ -22,3 +22,18 @@
 
   #{$footer-selector}
     height: $footer-height
+
+.container
+  width: 1215px
+  padding-left: 0px
+  padding-right: 0px
+
+@media only screen and (max-width: 1280px)
+  .container
+    width: 100%
+
+=hov-eff-green
+  &:hover
+    color: #9ecb32
+
+
