--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -1,3 +1,54 @@
 <footer>
-    FOOTER
+    <div class="container">
+        <div class="emotions">
+	        <div class="basil basil-first"></div>
+	        <div class="basil basil-second"></div>
+            <h1 class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
+            <div class="emotions-slider">
+                <div class="footer-slider slider single-item one-time">
+		          <button type="button" class="slick-prev"></button>
+                    <div class="slick-slide">
+                        <div class="logo-slid"><img src="/assets/images/slide-img.png" alt=""></div>
+                        <div class="sub-title">
+                            <span class="sub-title__text">Том ям с морепродуктами</span>
+	                        <ul class="sub-title-list">
+		                        <li class="sub-title-list__item">Экзотичность</li>
+		                        <li class="sub-title-list__item">Острота</li>
+		                        <li class="sub-title-list__item">Экзотичность</li>
+		                        <li class="sub-title-list__item">Острота</li>
+	                        </ul>
+	                        <a class="sub-title__btn" href="#">Заказать блюдо</a>
+                        </div>
+                    </div>
+                    <div class="slick-slide">
+	                    <div class="logo-slid"><img src="/assets/images/slide-img.png" alt=""></div>
+	                    <div class="sub-title">
+		                    <span class="sub-title__text">Том ям с морепродуктами</span>
+		                    <ul class="sub-title-list">
+			                    <li class="sub-title-list__item">Экзотичность</li>
+			                    <li class="sub-title-list__item">Острота</li>
+			                    <li class="sub-title-list__item">Экзотичность</li>
+			                    <li class="sub-title-list__item">Острота</li>
+		                    </ul>
+		                    <a class="sub-title__btn " href="#">Заказать блюдо</a>
+	                    </div>
+                    </div>
+	                <div class="slick-slide">
+	                    <div class="logo-slid"><img src="/assets/images/slide-img.png" alt=""></div>
+	                    <div class="sub-title">
+		                    <span class="sub-title__text">Том ям с морепродуктами</span>
+		                    <ul class="sub-title-list">
+			                    <li class="sub-title-list__item">Экзотичность</li>
+			                    <li class="sub-title-list__item">Острота</li>
+			                    <li class="sub-title-list__item">Экзотичность</li>
+			                    <li class="sub-title-list__item">Острота</li>
+		                    </ul>
+		                    <a class="sub-title__btn" href="#">Заказать блюдо</a>
+	                    </div>
+                    </div>
+                </div>
+                <button type="button" class="slick-next"></button>
+            </div>
+        </div>
+    </div>
 </footer>
