--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -1,3 +1,40 @@
-<header>
-    HEADER
+<header class="page--header">
+    <div class="sheet sheet__one"></div>
+    <div class="sheet sheet__second"></div>
+    <div class="container">
+        {% include "shared/_nav-header.njk" %}
+        <div class="remember">
+            <div class="remember-right">
+                <h1 class="remember__title">Вспомни лучшее</h1>
+                <div class="remember-text">
+                    <span class="remember__sub">вместе с Piu Del Cibo</span>
+                    <p class="remember__text">Расскажи историю о лучшей еде в твоей жизни и выиграй<br>
+блюдо не из меню от нашего шеф-повара, приготовленное<br> </p>
+                    <span class="remember__text remember__text_bold">специально для тебя</span>
+                </div>
+                <div class="remember-step">
+                    <div class="step step-one">
+                        <a class="remember__step " href="#"><img class="picture step__one" src="/assets/images/step-1.png" alt=""></a>
+                        <span class="remember__step__title">Шаг 1</span>
+                        <span class="remember__step__text">Вспомни историю</span>
+                    </div>
+
+                    <div class="step step-second">
+                        <a class="remember__step " href="#"><img class="picture step__second" src="/assets/images/step-2.png" alt=""></a>
+                        <span class="remember__step__title">Шаг 2</span>
+                        <span class="remember__step__text">Расскажи нам</span>
+                    </div>
+
+                    <div class="step step-third">
+                        <a class="remember__step" href="#"><img class="picture step__third" src="/assets/images/step-3.png" alt=""></a>
+                        <span class="remember__step__title">Шаг 3</span>
+                        <span class="remember__step__text">Выиграй приз</span>
+                    </div>
+                    <img class="arrow-long" src="/assets/images/arrow-long.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sheet sheet__third"></div>
+    <div class="sheet sheet__four"></div>
 </header>
