--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -1,4 +1,532 @@
 .wrapper
   margin: 0
   padding: 0
-  background-image: url("blocks/wrapper/square2.png")
+
+a:hover, a:focus
+  color: inherit
+  text-decoration: none
+
+.history-create
+  position: relative
+  background: url("../../images/bg-green.png") no-repeat
+  background-size: contain
+
+
+.create__pepper
+  position: absolute
+  top: 10%
+  left: 0
+  background: url("../../images/pepper.png") no-repeat
+  width: 150px
+  height: 275px
+
+.create__basil
+  position: absolute
+  left: -4%
+  bottom: 34%
+  background: url("../../images/basil.png") no-repeat
+  width: 100px
+  height: 100px
+
+.history-create
+  float: left
+  text-align: center
+  width: 400px
+  padding: 30px 30px 100px
+
+.history-content
+  border: 5px dotted #d6d6d6
+  border-radius: 10px
+  padding: 40px 40px 80px
+
+.history__title
+  font-family: drina
+  font-size: 50px
+  padding-top: 25px
+
+.history__text_white
+  color: #fff
+
+
+.history__text
+  display: block
+  font-family: gothamPM
+  font-size: 16px
+  padding-top: 15px
+  padding-bottom: 25px
+
+
+.history__send
+  color: #a4ce3e
+
+
+  &_white
+    background: #fff
+
+.history__text_top
+  padding-top: 25px
+  padding-bottom: 25px
+
+
+
+.history-last
+  position: relative
+  float: right
+
+  &__titile
+    text-align: center
+    font-family: drina
+    font-size: 55px
+    color: #444
+
+/**/
+.history-last > .slick-slider
+  width: 795px
+
+/**/
+.bacon
+  position: absolute
+  left: 13%
+  background: url("../../images/bacon.png") no-repeat
+  width: 100px
+  height: 100px
+
+.basilick
+  position: absolute
+  top: -3%
+  right: 10%
+  background: url("../../images/basil-small.png") no-repeat
+  width: 100px
+  height: 100px
+
+.history-people
+  position: relative
+  padding-top: 55px
+
+.history-left
+  float: left
+
+.history-one
+  width: 385px
+  min-height: 125px
+  margin-bottom: 25px
+
+.history__logo
+  float: left
+
+.history-feed
+  float: left
+  padding-left: 20px
+
+.logo-title
+  font-family: gothamPBo
+  font-size: 16px
+  color: #444
+  padding-bottom: 10px
+
+.feed
+  font-family: gothamPL
+  font-size: 15px
+  line-height: 22px
+  
+.whatch__full
+  display: block
+  font-family: gothamPBo
+  font-size: 15px
+  color: #9ecb33
+  margin-top: 10px
+  margin-bottom: 15px
+  
+  &:hover
+    text-decoration: none
+    color: #9ecb33
+
+  &:focus
+    color: #9ecb33
+    outline: none
+
+.full__fid
+  display: none
+  font-family: gothamPL
+  font-size: 15px
+
+
+  &-visible
+    display: block
+
+.history-right
+  float: right
+
+.history-paginations
+  clear: both
+
+.paginations-list
+  width: 410px
+  margin: 0 auto
+
+.paginations__item
+  float: left
+  color: #fff
+
+  &_sircle
+    background: #d0d0d0
+    border-radius: 50px
+    margin-left: 10px
+    margin-right: 10px
+    padding: 20px 22px
+
+  &_active
+    background: #9ecb32
+    color: #fff
+    
+  &:hover
+    text-decoration: none
+
+
+.history__prev, .history__next
+  z-index: 2
+  position: absolute
+  display: block
+  background: url("../../images/left-arrow-green.png") no-repeat
+  width: 25px
+  height: 25px
+  margin-top: 25px
+  margin-left: 10px
+  margin-right: 10px
+
+  &:hover
+    cursor: pointer
+
+.history__prev
+  bottom: -33px
+  left: 35%
+
+.history__next
+  transform: rotate(-180deg)
+  transform-origin: 50% 20%
+  right: 33%
+  bottom: -33px
+
+
+.history__pagin
+  padding: 10px 15px
+  border-radius: 50px
+  background: #d0d0d0
+  color: #fff
+
+  &:hover
+    color: #fff
+    background: #9ecb32
+
+
+.history-last-slider > ul > li
+  margin-left: 15px
+  margin-right: 15px
+
+.history-last-slider > ul > .slick-active > .history__pagin
+  background: #9ecb32
+
+.history-last-slider > .slick-dots
+  z-index: 1
+
+.victory
+  background: url("../../images/bg-main.png") no-repeat
+  position: relative
+  min-height: 700px
+  padding-left: 0
+  padding-right: 0
+
+.victory::before
+  content: ''
+  position: absolute
+  top: -6%
+  left: 0
+  background: url("../../images/line-main.png") no-repeat
+  height: 105px
+  width: 100%
+
+.victory-concurs
+  width: 630px
+  text-align: center
+  padding-top: 125px
+  padding-left: 111px
+
+
+.basil
+  width: 100px
+  height: 100px
+  position: absolute
+
+  &__main__one
+    background: url("../../images/bsil-last-main_first.png") no-repeat
+    top: 17%
+    right: 31%
+  &__main__second
+    background: url("../../images/basil-last-main_second.png") no-repeat
+    left: 15%
+    top: 41%
+  &__main__third
+    background: url("../../images/basil-last-main_third.png") no-repeat
+    right: 35%
+    top: 62%
+
+.victory__title
+  display: block
+  //padding-left: 100px
+  font-family: drina
+  font-size: 55px
+  color: #444
+
+.victory__text
+  text-align: left
+  display: block
+  padding-bottom: 20px
+  font-family: drina
+  font-size: 36px
+  color: #9ecb32
+
+.victory__last__day
+  display: block
+  padding-bottom: 15px
+
+.victory__last__day, .social__news
+  font-family: gothamPBo
+  font-size: 18px
+  color: #919191
+
+
+.rolling__line
+  position: absolute
+  bottom: -50px
+  background: url("../../images/line-footer.png") no-repeat
+  width: 100%
+  height: 110px
+  background-size: cover
+
+
+/*-------------------------------------------------*/
+
+.logo__count
+  text-align: center
+  line-height: 95px
+  font-size: 28px
+  font-weight: normal
+  //position: absolute
+  //top: 50%
+  //left: 50%
+  //margin-left: 50px
+  width: 500px
+  color: #939393
+
+.logo__count .counter
+  font-size: 50px
+  width: 80px
+  height: 50px
+  display: inline-block
+  padding: 0 30px 0 10px
+  perspective: 200px
+  position: relative
+  top: -7px
+
+
+.seconds, .minutes
+  margin-left: 10px
+
+.logo__count .counter > span
+  display: block
+  position: absolute
+  overflow: hidden
+  padding: 0 25px
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#f2f2f2))
+  background: -webkit-linear-gradient(#FFF 0%, #f2f2f2 100%)
+  background: -moz-linear-gradient(#FFF 0%, #f2f2f2 100%)
+  background: -o-linear-gradient(#FFF 0%, #f2f2f2 100%)
+  background: linear-gradient(#FFF 0%, #f2f2f2 100%)
+  height: 40px
+  width: 90px
+  text-align: center
+  backface-visibility: hidden
+  transform-style: preserve-3d
+
+.logo__count .counter span span
+  color: #99df1c
+
+.logo__count .counter span.decor.top, .logo__count .counter span.decor.top_m, .logo__count .counter span.decor.top_h
+  box-shadow: 0 24px 43px -3px rgba(0, 0, 0, 0.45)
+
+.logo__count .counter span.decor.bottom, .logo__count .counter span.decor.bottom_m, .logo__count .counter span.decor.bottom_h
+  box-shadow: 0 2px 0px -1px #d8d8d8, 0 4px 0px -2px #c7c7c7, 0 6px 0px -3px #d8d8d8, 0 8px 0px -4px #c6c6c6, 0 10px 0px -5px #d6d6d6, 0 12px 0px -6px #c9c9c9, 0 14px 0px -7px #d8d8d8, 0 14px 23px -9px rgba(0, 0, 0, 0.8)
+
+.logo__count .counter > span.top, .logo__count .counter > span.top_m, .logo__count .counter > span.top_h
+  box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
+  border-radius: 3px 3px 0 0
+
+.logo__count .counter > span.top span, .logo__count .counter > span.top_m span, .logo__count .counter > span.top_h span
+  position: relative
+  bottom: 5px
+
+.logo__count .counter > span.bottom, .logo__count .counter > span.bottom_m, .logo__count .counter > span.bottom_h
+  top: 40px
+  box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
+  border-radius: 0 0 3px 3px
+
+.logo__count .counter > span.bottom span, .logo__count .counter > span.bottom_m span, .logo__count .counter > span.bottom_h span
+  position: relative
+  top: -51px
+
+.logo__count .counter > span.from.bottom, .logo__count .counter > span.from_m.bottom_m, .logo__count .counter > span.from_h.bottom_h
+  z-index: 1
+  transform-origin: 0% 0%
+  animation: from-flip 1s
+
+.logo__count .counter > span.to.top, .logo__count .counter > span.to_m.top_m, .logo__count .counter > span.to_h.top_h
+  z-index: 1
+  transform-origin: 100% 100%
+  animation: to-flip 1s
+
+@keyframes from-flip
+  0%
+    transform: rotateX(180deg)
+
+  100%
+    transform: rotateX(0deg)
+
+@keyframes to-flip
+  0%
+    transform: rotateX(0deg)
+
+  100%
+    transform: rotateX(-180deg)
+
+@keyframes fade-out
+  0%
+    opacity: 1
+
+  100%
+    opacity: 0
+
+@keyframes fade-in
+  0%
+    opacity: 0
+
+  100%
+    opacity: 1
+
+.counter .shadow
+  display: block
+  width: 120px
+  height: 45px
+  left: -25px
+  top: -100px !important
+  overflow: hidden
+  z-index: 0
+  opacity: 0
+
+.counter .top .shadow
+  background: linear-gradient(rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%)
+
+.counter .bottom .shadow
+  background: linear-gradient(rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%)
+
+.counter .from.top .shadow
+  animation: fade-out 1s
+.counter .to.bottom .shadow
+  animation: fade-in 1s
+.hide .shadow
+  animation: none !important
+
+@media screen and (-webkit-min-device-pixel-ratio: 0)
+  .logo__count .counter > span span
+    color: rgba(0, 0, 0, 0)
+    background: linear-gradient(#99df1c 0%, #6dbe0a 100%)
+    -webkit-background-clip: text
+    -webkit-text-stroke: 0.03em #85c614
+
+
+/*-------------------------------------------------*/
+
+.social
+  position: relative
+  padding-top: 50px
+
+.small-dotted
+  position: absolute
+  top: 50%
+  left: 0
+  width: 100%
+  height: 75px
+  //background: url("../../images/small-dotted.png") no-repeat
+
+
+.social-logo
+  display: flex
+  flex-direction: row
+  justify-content: center
+  padding-top: 25px
+
+  &__item
+    z-index: 1
+    margin-left: 20px
+    margin-right: 20px
+
++media-1600
+  .victory
+    -ms-background-position-x: -155px
+    background-position-x: -155px
+
+  .basil__main__second
+    left: 12%
+    top: 42%
+  .basil__main__third
+    right: 34%
+    top: 65%
+
++media-1500
+  .victory
+    background-position-x: -240px
+
++media-1366
+  .victory
+    background-position-x: -330px
+
++media-1280
+  .basil__main__second
+    left: 10%
+
++media-1225
+  .history-create
+    width: 350px
+
+  .history__title
+    font-size: 36px
+    padding-top: 10px
+
+  .history-content
+    padding-left: 20px
+    padding-right: 20px
+
+  .history__text
+    font-size: 15px
+
+  .history-right
+    margin-right: 20px
+
++media-1152
+
+  .history-last > .slick-slider
+    width: 700px
+
+  .history-one
+    width: 340px
+
+  .history-right
+    margin-right: 0px
+
+  .history-feed
+    padding-left: 10px
+
+  .feed
+    font-size: 13px
+    line-height: 18px
+
+  font-size: 13px
