--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -10,6 +10,9 @@
 =media-1600
   @media only screen and (max-width: 1600px)
     @content
+=media-1500
+  @media only screen and (max-width: 1500px)
+    @content
 =media-1440
   @media only screen and (max-width: 1440px)
     @content
@@ -18,6 +21,9 @@
     @content
 =media-1280
   @media only screen and (max-width: 1280px)
+    @content
+=media-1225
+  @media only screen and (max-width: 1225px)
     @content
 =media-1200
   @media only screen and (max-width: 1200px)
