--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -10,12 +10,12 @@ footer
 
 
 .basil-first
-  background: url("../../images/basil-footer_second.png") no-repeat
+  //background: url("../../images/basil-footer_second.png") no-repeat
   top: 22%
   right: 10%
 
 .basil-second
-  background: url("../../images/basil-footer_first.png") no-repeat
+  //background: url("../../images/basil-footer_first.png") no-repeat
   top: 60%
   left: 16%
 
@@ -136,3 +136,10 @@ footer
   border-radius: 50px
   background-color: #9ecb32
 
+
++media-1024
+  .victory
+    background-position-x: -450px
+
+  .basil-first
+    right: 5%
