--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -107,19 +107,19 @@
   height: 100px
 
   &__one
-    background: url("../../images/sheets-one.png") no-repeat
+    //background: url("../../images/sheets-one.png") no-repeat
     left: 9%
     top: 65%
   &__second
-    background: url("../../images/sheets-second.png") no-repeat
+    //background: url("../../images/sheets-second.png") no-repeat
     left: 13%
     top: 81%
   &__third
-    background: url("../../images/sheets-third.png") no-repeat
+    //background: url("../../images/sheets-third.png") no-repeat
     top: 20%
     right: 10%
   &__four
-    background: url("../../images/sheets-four.png") no-repeat
+    //background: url("../../images/sheets-four.png") no-repeat
     top: 83%
     right: 8%
 
@@ -200,8 +200,14 @@
 
 +media-1152
 
+
+
   .page--header
     background-position-x: -225px
+
+  .step-third
+    margin-left: 10px
+
 
   .remember__text
     font-size: 14px
@@ -218,3 +224,10 @@
     right: 5%
   .sheet__four
     right: 0
+
++media-1024
+  .page--header
+    background-position-x: -280px
+
+  .arrow-long
+    bottom: 34%
