--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -16,17 +16,17 @@ a:hover, a:focus
   position: absolute
   top: 10%
   left: 0
-  background: url("../../images/pepper.png") no-repeat
-  width: 150px
-  height: 275px
+  //background: url("../../images/pepper.png") no-repeat
+  //width: 150px
+  //height: 275px
 
 .create__basil
   position: absolute
   left: -4%
   bottom: 34%
-  background: url("../../images/basil.png") no-repeat
-  width: 100px
-  height: 100px
+  //background: url("../../images/basil.png") no-repeat
+  //width: 100px
+  //height: 100px
 
 .history-create
   float: left
@@ -253,20 +253,20 @@ a:hover, a:focus
 
 
 .basil
-  width: 100px
-  height: 100px
+  //width: 100px
+  //height: 100px
   position: absolute
 
   &__main__one
-    background: url("../../images/bsil-last-main_first.png") no-repeat
+    //background: url("../../images/bsil-last-main_first.png") no-repeat
     top: 17%
     right: 31%
   &__main__second
-    background: url("../../images/basil-last-main_second.png") no-repeat
+    //background: url("../../images/basil-last-main_second.png") no-repeat
     left: 15%
     top: 41%
   &__main__third
-    background: url("../../images/basil-last-main_third.png") no-repeat
+    //background: url("../../images/basil-last-main_third.png") no-repeat
     right: 35%
     top: 62%
 
@@ -513,6 +513,7 @@ a:hover, a:focus
 
 +media-1152
 
+
   .history-last > .slick-slider
     width: 700px
 
@@ -529,4 +530,42 @@ a:hover, a:focus
     font-size: 13px
     line-height: 18px
 
-  font-size: 13px
+  .full__fid
+    font-size: 13px
+
+  .bacon
+    left: 5%
+  //font-size: 13px
+
++media-1024
+
+  .history-create
+    width: 30vw
+    //padding-bottom: 0
+
+  .history-content
+    padding-bottom: 10px
+
+  .history__text
+    font-size: 12px
+
+  .create__basil
+    left: -2%
+    bottom: 27%
+    width: 65px
+
+  .create__pepper
+    width: 90px
+
+  .basil__main__one
+    right: 20%
+
+  .basil__main__third
+    right: 24%
+
++media-1000
+  .history-last > .slick-slider
+    width: 68vw
+
+  //.feed
+    font-size: 1.3vw
