--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -34,6 +34,9 @@
 =media-1024
   @media only screen and (max-width: 1024px)
     @content
+=media-1000
+  @media only screen and (max-width: 1000px)
+    @content
 =media-992
   @media only screen and (max-width: 992px)
     @content
