--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -8,8 +8,8 @@
 
     <div class="history">
         <div class="history-create">
-            <div class="create__pepper"></div>
-            <div class="create__basil"></div>
+            <img class="create__pepper" src="/assets/images/pepper.png">
+            <img class="create__basil" src="/assets/images/basil.png">
             <div class="history-content">
                 <h2 class="history__title history__text_white">Добавить свою<br>историю</h2>
                 <p class="history__text history__text_white">чтобы получить возможность<br> выиграть блюдо из твоих<br>воспоминаний</p>
@@ -199,9 +199,9 @@
 
 <div class="container-fluid victory">
 	{#absolut basil#}
-	<div class="basil basil__main__one"></div>
-	<div class="basil basil__main__second"></div>
-	<div class="basil basil__main__third"></div>
+	<img class="basil basil__main__one" src="/assets/images/bsil-last-main_first.png">
+	<img class="basil basil__main__second" src="/assets/images/basil-last-main_second.png">
+	<img class="basil basil__main__third" src="/assets/images/basil-last-main_third.png">
 	{##}
     <div class="container">
         <div class="victory-concurs">
