--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -1,8 +1,8 @@
 <footer>
     <div class="container">
         <div class="emotions">
-	        <div class="basil basil-first"></div>
-	        <div class="basil basil-second"></div>
+	        <img class="basil basil-first" src="/assets/images/basil-footer_second.png">
+	        <img class="basil basil-second" src="/assets/images/basil-footer_first.png">
             <h1 class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
             <div class="emotions-slider">
                 <div class="footer-slider slider single-item one-time">
