--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -1,6 +1,6 @@
 <header class="page--header">
-    <div class="sheet sheet__one"></div>
-    <div class="sheet sheet__second"></div>
+    <img class="sheet sheet__one" src="/assets/images/sheets-one.png">
+    <img class="sheet sheet__second" src="/assets/images/sheets-second.png">
     <div class="container">
         {% include "shared/_nav-header.njk" %}
         <div class="remember">
@@ -35,6 +35,6 @@
             </div>
         </div>
     </div>
-    <div class="sheet sheet__third"></div>
-    <div class="sheet sheet__four"></div>
+    <img class="sheet sheet__third" src="/assets/images/sheets-third.png">
+    <img class="sheet sheet__four" src="/assets/images/sheets-four.png">
 </header>
