--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -69,6 +69,10 @@
 .navbar-default .navbar-center .navbar__item_center .nav-link
   +hov-eff-green
 
++media-1200
+  .navbar__item_center
+    padding-left: 25px
+    padding-right: 25px
 
 
 
