--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -143,3 +143,12 @@ footer
 
   .basil-first
     right: 5%
+
++media-860
+  .slider .slick-prev
+    left: 25%
+  .slider .slick-next
+    right: 25%
+
+  .basil-second
+    left: 10%
