--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -45,6 +45,9 @@
   color: #6c6c6c
   line-height: 27px
 
+.remember__text_new
+  display: none
+
 .remember__text_bold
   font-family: gothamPBo
   color: #000
@@ -231,3 +234,69 @@
 
   .arrow-long
     bottom: 34%
+
++media-955
+  .remember-right
+    padding-right: 20px
+
+  .arrow-long
+    right: 0%
+    width: 55vw
+
+  .remember__title
+    font-size: 55px
+
+  .page--header
+    background-position-x: -325px
+
+  .bacon
+    width: 100px
+
++media-900
+  .remember__step__title
+    font-size: 2vw
+
+  .remember__step__text
+    font-size: 2vw
+
+  .step-third
+    margin-left: 15px
+
++media-860
+
+  .page--header
+    background-position-x: -365px
+
+  .remember__text_hide
+    display: none
+  .remember__text_new
+    display: block
+
+  .remember__text
+    margin-right: 100px
+    margin-left: 0px
+  .remember__sub
+    margin-left: 0px
+
+  .remember-text::before
+    display: none
+
+  .remember-step
+    position: absolute
+    right: 10%
+    justify-content: space-between
+
+  .sheet__third
+    right: 0
+
+  .arrow-long
+    right: -10%
+    width: 60vw
+
+  .step
+    margin-left: 10px
+
+  .step-third
+    margin-left: 15px
+
+
