--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -75,8 +75,19 @@
     padding-right: 25px
 
 
++media-955
+  .nav-link
+    font-size: 16px
 
++media-900
+  .logo__header
+    margin-top: 10px
+    width: 100px
+    height: 100px
 
+  .nav-link
+    font-size: 2vw
 
-
-
+  .navbar__item_center
+    padding-left: 15px
+    padding-right: 15px
