--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -25,3 +25,12 @@
   .simple__btn
     width: 165px
     font-size: 14px
+
++media-992
+  .simple__btn
+    width: 22vw
+    font-size: 17px
+
++media-860
+  .simple__btn
+    width: 25vw
