--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -20,8 +20,8 @@
         </div>
 
         <div class="history-last">
-            <div class="bacon"></div>
-            <div class="basilick"></div>
+            <img class="bacon" src="/assets/images/bacon.png">
+            <img class="basilick" src="/assets/images/basil-small.png">
             <h2 class="history-last__titile">Последние истории</h2>
 	        <div class="history-last-slider slider ">
 		        <div class="history-slider slick-slide ">
