--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -40,6 +40,15 @@
 =media-992
   @media only screen and (max-width: 992px)
     @content
+=media-955
+  @media only screen and (max-width: 955px)
+    @content
+=media-900
+  @media only screen and (max-width: 900px)
+    @content
+=media-860
+  @media only screen and (max-width: 860px)
+    @content
 =media-800
   @media only screen and (max-width: 800px)
     @content
