--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -8,8 +8,10 @@
                 <h1 class="remember__title">Вспомни лучшее</h1>
                 <div class="remember-text">
                     <span class="remember__sub">вместе с Piu Del Cibo</span>
-                    <p class="remember__text">Расскажи историю о лучшей еде в твоей жизни и выиграй<br>
-блюдо не из меню от нашего шеф-повара, приготовленное<br> </p>
+                    <p class="remember__text remember__text_hide">Расскажи историю о лучшей еде в твоей жизни и выиграй<br>
+блюдо не из меню от нашего шеф-повара, приготовленное<br></p>
+                    <p class="remember__text remember__text_new">Расскажи историю о лучшей еде в твоей<br> жизни и выиграй
+                        блюдо не из меню<br> от нашего шеф-повара, приготовленное<br></p>
                     <span class="remember__text remember__text_bold">специально для тебя</span>
                 </div>
                 <div class="remember-step">
