--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -336,13 +336,13 @@ a:hover, a:focus
   display: block
   position: absolute
   overflow: hidden
-  padding: 0 25px
+  padding: 0 5px
   background: -webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#f2f2f2))
   background: -webkit-linear-gradient(#FFF 0%, #f2f2f2 100%)
   background: -moz-linear-gradient(#FFF 0%, #f2f2f2 100%)
   background: -o-linear-gradient(#FFF 0%, #f2f2f2 100%)
   background: linear-gradient(#FFF 0%, #f2f2f2 100%)
-  height: 40px
+  height: 45px
   width: 90px
   text-align: center
   backface-visibility: hidden
@@ -350,39 +350,58 @@ a:hover, a:focus
 
 .logo__count .counter span span
   color: #99df1c
+  line-height: 100px
 
-.logo__count .counter span.decor.top, .logo__count .counter span.decor.top_m, .logo__count .counter span.decor.top_h
+.logo__count .counter span.decor.top,
+.logo__count .counter span.decor.top_m,
+.logo__count .counter span.decor.top_h
   box-shadow: 0 24px 43px -3px rgba(0, 0, 0, 0.45)
 
-.logo__count .counter span.decor.bottom, .logo__count .counter span.decor.bottom_m, .logo__count .counter span.decor.bottom_h
+.logo__count .counter span.decor.bottom,
+.logo__count .counter span.decor.bottom_m,
+.logo__count .counter span.decor.bottom_h
   box-shadow: 0 2px 0px -1px #d8d8d8, 0 4px 0px -2px #c7c7c7, 0 6px 0px -3px #d8d8d8, 0 8px 0px -4px #c6c6c6, 0 10px 0px -5px #d6d6d6, 0 12px 0px -6px #c9c9c9, 0 14px 0px -7px #d8d8d8, 0 14px 23px -9px rgba(0, 0, 0, 0.8)
 
-.logo__count .counter > span.top, .logo__count .counter > span.top_m, .logo__count .counter > span.top_h
+.logo__count .counter > span.top,
+.logo__count .counter > span.top_m,
+.logo__count .counter > span.top_h
   box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
   border-radius: 3px 3px 0 0
 
-.logo__count .counter > span.top span, .logo__count .counter > span.top_m span, .logo__count .counter > span.top_h span
+.logo__count .counter > span.top span,
+.logo__count .counter > span.top_m span,
+.logo__count .counter > span.top_h span
   position: relative
   bottom: 5px
 
-.logo__count .counter > span.bottom, .logo__count .counter > span.bottom_m, .logo__count .counter > span.bottom_h
-  top: 40px
+.logo__count .counter > span.bottom,
+.logo__count .counter > span.bottom_m,
+.logo__count .counter > span.bottom_h
+  top: 45px
   box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
   border-radius: 0 0 3px 3px
 
-.logo__count .counter > span.bottom span, .logo__count .counter > span.bottom_m span, .logo__count .counter > span.bottom_h span
+.logo__count .counter > span.bottom span,
+.logo__count .counter > span.bottom_m span,
+.logo__count .counter > span.bottom_h span
   position: relative
   top: -51px
 
-.logo__count .counter > span.from.bottom, .logo__count .counter > span.from_m.bottom_m, .logo__count .counter > span.from_h.bottom_h
+.logo__count .counter > span.from.bottom,
+.logo__count .counter > span.from_m.bottom_m,
+.logo__count .counter > span.from_h.bottom_h
   z-index: 1
   transform-origin: 0% 0%
   animation: from-flip 1s
+  animation-fill-mode: forwards
 
-.logo__count .counter > span.to.top, .logo__count .counter > span.to_m.top_m, .logo__count .counter > span.to_h.top_h
+.logo__count .counter > span.to.top,
+.logo__count .counter > span.to_m.top_m,
+.logo__count .counter > span.to_h.top_h
   z-index: 1
   transform-origin: 100% 100%
   animation: to-flip 1s
+  animation-fill-mode: forwards
 
 @keyframes from-flip
   0%
