--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -138,8 +138,6 @@ footer
 
 
 +media-1024
-  .victory
-    background-position-x: -450px
 
   .basil-first
     right: 5%
@@ -152,3 +150,24 @@ footer
 
   .basil-second
     left: 10%
+
++media-768
+  .emotions
+    padding-left: 25px
+    padding-right: 25px
+
+  .emotions__title
+    font-size: 8.5vw
+
+  .slider .slick-next
+    right: 15%
+
+  .slider .slick-prev
+    left: 20%
+
+  .basil-first
+    top: 30%
+
+  .basil-second
+    left: 7%
+    top: 67%
