--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -299,4 +299,70 @@
   .step-third
     margin-left: 15px
 
+  .remember__title
+    font-size: 70px
 
+  .remember__title
+    margin-right: 50px
+    display: block
+
+  .sheet
+    position: absolute
+    width: 65px
+    height: 65px
+
+  .sheet__third
+    top: 23%
+
++media-800
+  .remember__title
+    margin-right: 0px
+
+
++media-768
+
+  .sheet__one
+    left: 10%
+    top: 20%
+
+  .sheet__third
+    right: 5%
+    top: 20%
+
+  .sheet__four
+    top: 92%
+    right: 18%
+
+
+  .sheet
+    width: 80px
+    height: 85px
+    z-index: 2
+
+  .sheet__second
+    top: 85%
+
+  .remember__text
+    margin-right: 0px
+
+  .remember__title
+    font-size: 65px
+
+  .picture
+    width: 125px
+    height: 125px
+
+  .arrow-long
+    width: 66vw
+
+  //.step
+    margin-left: 15px
+
+  //.step-third
+    margin-left: 15px
+
+  .remember__step__title
+    font-size: 2.5vw
+
+  .remember__step__text
+    font-size: 2.3vw
