--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -13,7 +13,6 @@
 .navbar-nav
   width: 100%
 
-
 .logo__header
   width: 125px
   height: 125px
@@ -91,3 +90,7 @@
   .navbar__item_center
     padding-left: 15px
     padding-right: 15px
+
++media-800
+  .nav-link
+    font-size: 1.8vw
