--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -541,6 +541,9 @@ a:hover, a:focus
 
 +media-1024
 
+  .victory
+    background-position-x: -450px
+
   .history-create
     width: 30vw
     //padding-bottom: 0
@@ -639,6 +642,7 @@ a:hover, a:focus
   .history-content
     padding-left: 20px
     padding-right: 20px
+    padding-bottom: 50px
 
   .history-left > .history-one
     width: 340px
@@ -659,3 +663,58 @@ a:hover, a:focus
 
   .basil__main__second
     top: 55%
+
+
++media-800
+  .history-content
+    padding-bottom: 20px
+
+  .basilick
+    right: 16%
+
+  .bacon
+    left: 12%
+
++media-768
+  .history__text
+    font-size: 15px
+
+  .history-create
+    width: 50vw
+
+  .history-content
+    padding-bottom: 50px
+
++media-768
+  .basil__main__one
+    width: 10vw
+    top: 10%
+    right: 25%
+
+  .basil__main__second
+    width: 9vw
+    left: 5%
+
+  .basil__main__third
+    width: 9vw
+    right: 23%
+
+  .small-dotted
+    left: 10%
+
+  .victory
+    background-position-x: -685px
+
+  .victory-concurs
+    width: 525px
+    text-align: left
+
+  .victory__text
+    padding-left: 15px
+
+  .victory__last__day, .social__news
+    display: block
+    text-align: center
+
+  .logo__count
+    width: 445px
