--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -1,96 +1,41 @@
-.navbar-default
-  background-color: transparent
-  border-color: transparent
-
-  min-height: 140px
-
-.navbar-default .navbar-nav > li > a
+a
   color: inherit
 
-.menu__btn
-  display: none
-
-.navbar-nav
-  width: 100%
-
-.logo__header
-  width: 125px
-  height: 125px
-  margin-left: 25px
-  margin-right: 25px
-
-.navbar-center
+.menu-content
   display: flex
-  flex-direction: row
-  justify-content: center
+  justify-content: space-around
+  min-height: 150px
+  line-height: 150px
 
-.navbar__item_center
-  padding-top: 50px
-  padding-left: 50px
-  padding-right: 56px
+  &__item
+    position: relative
+    font-family: gothamPB
+    font-size: 18px
+    color: #444
 
-  &:active
+
+
+  &__link:active
     &::after
+      position: absolute
       content: ''
       display: block
+      text-align: center
       width: 10px
       height: 10px
-      border-radius: 50px
+      top: 65%
+      left: 40%
+
       background: #9ecb32
-      margin: 0 auto
+      border-radius: 50px
+
+  &__link
+    &:hover
+      color: #9ecb32
 
 
-.nav-link
-  font-family: gothamPB
-  font-size: 18px
+.logo
+  padding-top: 10px
+  width: 120px
+  height: 125px
 
-//.nav-link::after
-  display: none
-  content: ''
-  background: url("../../images/circl-green.png") no-repeat
-  width: 10px
-  height: 10px
-  text-align: center
-  margin: 10px auto 0
-
-//.nav-link:active
-  .nav-link::after
-    display: block
-
-
-.nav > li > a
-  padding-right: 0
-  padding-left: 0
-
-.navbar-center .navbar_center .nav-link_black
-  color: $font-color
-
-.navbar-default .navbar-center .navbar__item_center .nav-link
-  +hov-eff-green
-
-+media-1200
-  .navbar__item_center
-    padding-left: 25px
-    padding-right: 25px
-
-
-+media-955
-  .nav-link
-    font-size: 16px
-
-+media-900
-  .logo__header
-    margin-top: 10px
-    width: 100px
-    height: 100px
-
-  .nav-link
-    font-size: 2vw
-
-  .navbar__item_center
-    padding-left: 15px
-    padding-right: 15px
-
-+media-800
-  .nav-link
-    font-size: 1.8vw
