--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -242,6 +242,11 @@
     right: 4%
     bottom: 27%
 
+  +media-1152
+    width: 45vw
+    right: 2%
+    bottom: 29%
+
   +media-1024
     bottom: 30%
 
