--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -11,22 +11,49 @@ a:hover, a:focus
   background: url("../../images/bg-green.png") no-repeat
   background-size: contain
 
+  +media-1152
+    width: 31vw
+
+  +media-1024
+    width: 30vw
+
+  +media-992
+    margin: 0 auto
+    float: none
+    width: 42vw
+
+  +media-900
+    width: 45vw
+    background-size: contain
+    padding-bottom: 120px
+
+  +media-768
+    width: 50vw
+
 
 .create__pepper
   position: absolute
   top: 10%
   left: 0
-  //background: url("../../images/pepper.png") no-repeat
-  //width: 150px
-  //height: 275px
+
+  +media-1024
+    width: 90px
+
 
 .create__basil
   position: absolute
   left: -4%
   bottom: 34%
-  //background: url("../../images/basil.png") no-repeat
-  //width: 100px
-  //height: 100px
+
+  +media-1024
+    left: -2%
+    bottom: 27%
+    width: 65px
+
+  +media-992
+    bottom: 35%
+    width: 80px
+
 
 .history-create
   float: left
@@ -34,15 +61,54 @@ a:hover, a:focus
   width: 400px
   padding: 30px 30px 100px
 
+  +media-1225
+    width: 350px
+
 .history-content
   border: 5px dotted #d6d6d6
   border-radius: 10px
   padding: 40px 40px 80px
 
+  +media-1225
+    padding-left: 20px
+    padding-right: 20px
+
+  +media-1024
+    padding-bottom: 10px
+
+  +media-992
+    padding-left: 40px
+    padding-right: 40px
+    padding-bottom: 80px
+
+  +media-860
+    padding-left: 20px
+    padding-right: 20px
+    padding-bottom: 50px
+
+  +media-800
+    padding-bottom: 20px
+
+  +media-768
+    padding-bottom: 50px
+
 .history__title
   font-family: drina
   font-size: 50px
   padding-top: 25px
+
+  +media-1225
+    font-size: 36px
+    padding-top: 10px
+
+  +media-992
+    font-size: 50px
+
+  +media-900
+    padding-top: 50px
+
+  +media-860
+    font-size: 5vw
 
 .history__text_white
   color: #fff
@@ -53,25 +119,37 @@ a:hover, a:focus
   font-family: gothamPM
   font-size: 16px
   padding-top: 15px
-  padding-bottom: 25px
+  //padding-bottom: 25px
+
+  +media-1225
+    font-size: 15px
+
+  +media-1024
+    font-size: 12px
+
+  +media-992
+    font-size: 16px
+
+  +media-768
+    font-size: 15px
 
 
 .history__send
   color: #a4ce3e
-
 
   &_white
     background: #fff
 
 .history__text_top
   padding-top: 25px
-  padding-bottom: 25px
-
-
+  //padding-bottom: 25px
 
 .history-last
   position: relative
   float: right
+
+  +media-992
+    float: none
 
   &__titile
     text-align: center
@@ -79,37 +157,82 @@ a:hover, a:focus
     font-size: 55px
     color: #444
 
-/**/
 .history-last > .slick-slider
   width: 795px
 
-/**/
+  +media-1152
+    width: 700px
+
+  +media-1000
+    width: 68vw
+
+  +media-992
+    width: 100%
+
+
 .bacon
   position: absolute
   left: 13%
-  //background: url("../../images/bacon.png") no-repeat
-  //width: 100px
-  //height: 100px
+
+  +media-1152
+    left: 5%
+
+  +media-992
+    left: 20%
+
+  +media-900
+    left: 16%
+
+  +media-800
+    left: 12%
+
 
 .basilick
   position: absolute
   top: -3%
   right: 10%
-  //background: url("../../images/basil-small.png") no-repeat
-  //width: 100px
-  //height: 100px
+
+  +media-992
+    right: 23%
+
+  +media-900
+    right: 20%
+
+  +media-800
+    right: 16%
+
 
 .history-people
   position: relative
   padding-top: 55px
 
+  +media-992
+    padding-top: 55px
+    display: flex
+    justify-content: space-around
+
 .history-left
   float: left
+
+.history-left > .history-one
+  +media-1000
+    width: 32vw
+
+  +media-900
+    width: 34vw
+
+  +media-860
+    width: 340px
+
 
 .history-one
   width: 385px
   min-height: 125px
   margin-bottom: 25px
+
+  +media-1152
+    width: 340px
+
 
 .history__logo
   float: left
@@ -117,6 +240,9 @@ a:hover, a:focus
 .history-feed
   float: left
   padding-left: 20px
+
+  +media-1152
+    padding-left: 10px
 
 .logo-title
   font-family: gothamPBo
@@ -128,6 +254,10 @@ a:hover, a:focus
   font-family: gothamPL
   font-size: 15px
   line-height: 22px
+
+  +media-1152
+    font-size: 13px
+    line-height: 18px
   
 .whatch__full
   display: block
@@ -150,12 +280,20 @@ a:hover, a:focus
   font-family: gothamPL
   font-size: 15px
 
+  +media-1152
+    font-size: 13px
 
   &-visible
     display: block
 
 .history-right
   float: right
+
+  +media-1225
+    margin-right: 20px
+
+  +media-1152
+    margin-right: 0px
 
 .history-paginations
   clear: both
@@ -236,6 +374,27 @@ a:hover, a:focus
   padding-left: 0
   padding-right: 0
 
+  +media-1600
+    -ms-background-position-x: -155px
+    background-position-x: -155px
+
+  +media-1500
+    background-position-x: -240px
+
+  +media-1366
+    background-position-x: -330px
+
+  +media-1024
+    background-position-x: -450px
+
+  +media-860
+    min-height: 640px
+    background-position-x: -570px
+
+  +media-768
+    background-position-x: -685px
+
+
 .victory::before
   content: ''
   position: absolute
@@ -251,28 +410,64 @@ a:hover, a:focus
   padding-top: 125px
   padding-left: 111px
 
+  +media-860
+    padding-left: 50px
+
+  +media-768
+    width: 525px
+    text-align: left
+
 
 .basil
-  //width: 100px
-  //height: 100px
   position: absolute
 
   &__main__one
-    //background: url("../../images/bsil-last-main_first.png") no-repeat
     top: 17%
     right: 31%
+
+    +media-1024
+      right: 20%
+
+    +media-768
+      width: 10vw
+      top: 10%
+      right: 25%
+
   &__main__second
-    //background: url("../../images/basil-last-main_second.png") no-repeat
     left: 15%
     top: 41%
+
+    +media-1600
+      left: 12%
+      top: 42%
+
+    +media-860
+      top: 55%
+
+    +media-1280
+      left: 10%
+
+    +media-768
+      width: 9vw
+      left: 5%
+
   &__main__third
-    //background: url("../../images/basil-last-main_third.png") no-repeat
     right: 35%
     top: 62%
 
+    +media-1600
+      right: 34%
+      top: 65%
+
+    +media-1024
+      right: 24%
+
+    +media-768
+      width: 9vw
+      right: 23%
+
 .victory__title
   display: block
-  //padding-left: 100px
   font-family: drina
   font-size: 55px
   color: #444
@@ -285,6 +480,9 @@ a:hover, a:focus
   font-size: 36px
   color: #9ecb32
 
+  +media-768
+    padding-left: 15px
+
 .victory__last__day
   display: block
   padding-bottom: 15px
@@ -293,6 +491,10 @@ a:hover, a:focus
   font-family: gothamPBo
   font-size: 18px
   color: #919191
+
+  +media-768
+    display: block
+    text-align: center
 
 
 .rolling__line
@@ -303,20 +505,20 @@ a:hover, a:focus
   height: 110px
   background-size: cover
 
-
-/*-------------------------------------------------*/
-
 .logo__count
   text-align: center
   line-height: 95px
   font-size: 28px
   font-weight: normal
-  //position: absolute
-  //top: 50%
-  //left: 50%
-  //margin-left: 50px
+
   width: 500px
   color: #939393
+
+  +media-860
+    width: 550px
+
+  +media-768
+    width: 445px
 
 .logo__count .counter
   font-size: 50px
@@ -474,8 +676,13 @@ a:hover, a:focus
   left: 0
   width: 100%
   height: 75px
-  //background: url("../../images/small-dotted.png") no-repeat
 
+  +media-860
+    left: 15%
+    width: 50vw
+
+  +media-768
+    left: 10%
 
 .social-logo
   display: flex
@@ -488,257 +695,3 @@ a:hover, a:focus
     margin-left: 20px
     margin-right: 20px
 
-
-
-
-
-
-+media-1600
-  .victory
-    -ms-background-position-x: -155px
-    background-position-x: -155px
-
-  .basil__main__second
-    left: 12%
-    top: 42%
-  .basil__main__third
-    right: 34%
-    top: 65%
-
-+media-1500
-  .victory
-    background-position-x: -240px
-
-+media-1366
-  .victory
-    background-position-x: -330px
-
-+media-1280
-  .basil__main__second
-    left: 10%
-
-+media-1225
-  .history-create
-    width: 350px
-
-  .history__title
-    font-size: 36px
-    padding-top: 10px
-
-  .history-content
-    padding-left: 20px
-    padding-right: 20px
-
-  .history__text
-    font-size: 15px
-
-  .history-right
-    margin-right: 20px
-
-+media-1152
-
-  .history-create
-    width: 31vw
-
-  .history-last > .slick-slider
-    width: 700px
-
-  .history-one
-    width: 340px
-
-  .history-right
-    margin-right: 0px
-
-  .history-feed
-    padding-left: 10px
-
-  .feed
-    font-size: 13px
-    line-height: 18px
-
-  .full__fid
-    font-size: 13px
-
-  .bacon
-    left: 5%
-  //font-size: 13px
-
-+media-1024
-
-  .victory
-    background-position-x: -450px
-
-  .history-create
-    width: 30vw
-    //padding-bottom: 0
-
-  .history-content
-    padding-bottom: 10px
-
-  .history__text
-    font-size: 12px
-
-  .create__basil
-    left: -2%
-    bottom: 27%
-    width: 65px
-
-  .create__pepper
-    width: 90px
-
-  .basil__main__one
-    right: 20%
-
-  .basil__main__third
-    right: 24%
-
-+media-1000
-  .history-last > .slick-slider
-    width: 68vw
-
-  .history-left > .history-one
-    width: 32vw
-
-+media-992
-
-  .history-create
-    margin: 0 auto
-    float: none
-
-  .history-create
-    width: 42vw
-
-  .history-content
-    padding-left: 40px
-    padding-right: 40px
-    padding-bottom: 80px
-
-  .history__title
-    font-size: 50px
-
-  .history__text
-    font-size: 16px
-
-  .create__basil
-    bottom: 35%
-    width: 80px
-
-  .history-last
-    float: none
-
-  .history-last > .slick-slider
-    width: 100%
-
-  .history-people
-    padding-top: 55px
-    display: flex
-    justify-content: space-around
-
-  .bacon
-    left: 20%
-
-  .basilick
-    right: 23%
-
-+media-900
-  .history-create
-    width: 45vw
-    background-size: contain
-    padding-bottom: 120px
-
-  .history__title
-    padding-top: 50px
-
-  .bacon
-    left: 16%
-
-  .basilick
-    right: 20%
-
-  .history-left > .history-one
-    width: 34vw
-
-+media-860
-
-  .history__title
-    font-size: 5vw
-
-  .history-content
-    padding-left: 20px
-    padding-right: 20px
-    padding-bottom: 50px
-
-  .history-left > .history-one
-    width: 340px
-
-  .victory
-    min-height: 640px
-    background-position-x: -570px
-
-  .victory-concurs
-    padding-left: 50px
-
-  .logo__count
-    width: 550px
-
-  .small-dotted
-    left: 15%
-    width: 50vw
-
-  .basil__main__second
-    top: 55%
-
-
-+media-800
-  .history-content
-    padding-bottom: 20px
-
-  .basilick
-    right: 16%
-
-  .bacon
-    left: 12%
-
-+media-768
-  .history__text
-    font-size: 15px
-
-  .history-create
-    width: 50vw
-
-  .history-content
-    padding-bottom: 50px
-
-+media-768
-  .basil__main__one
-    width: 10vw
-    top: 10%
-    right: 25%
-
-  .basil__main__second
-    width: 9vw
-    left: 5%
-
-  .basil__main__third
-    width: 9vw
-    right: 23%
-
-  .small-dotted
-    left: 10%
-
-  .victory
-    background-position-x: -685px
-
-  .victory-concurs
-    width: 525px
-    text-align: left
-
-  .victory__text
-    padding-left: 15px
-
-  .victory__last__day, .social__news
-    display: block
-    text-align: center
-
-  .logo__count
-    width: 445px
